sample文件代码删除，基础信息修改

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Judy Map",
+  "name": "An index website for programmer",
   "icons": [
     {
       "src": "favicon.ico",
